# gnome-panel

./: ChangeLog  Makefile.am  autogen.sh  configure.ac  configure.in  gnome-panel.doap
applets/clock/: ChangeLog  Makefile.am  clock-utils.c  clock.c  clock.h  org.gnome.panel.ClockApplet.panel-applet.in.in  test-system-timezone.c
applets/fish/: ChangeLog  Makefile.am  fish.c  fish_applet.desktop  org.gnome.panel.FishApplet.panel-applet.in.in
applets/gen_util/: ChangeLog  clock_applet.desktop  mailcheck.c  mailcheck.soundlist  mailcheck_applet.desktop  main.c  (+2 more)
data/: Makefile.am  gnome-flashback-compiz.desktop.in.in  gnome-flashback-mutter.desktop.in.in  gnome-flashback-mutter.session.desktop.in  gnome-flashback.desktop.in.in  gnome-flashback.session.desktop.in
gnome-panel/: .cvsignore  ChangeLog  ChangeLog-20010806  Makefile.am  aligned-widget.c  applet-server.c  applet-server.h  applet-widget.c  applet-widget.h  applet.c  applet.h  basep-widget.c  basep-widget.h  border-widget.c  button-widget.c  button-widget.h  corner-widget.c  drawer-widget.c  drawer.c  edge-widget.c  extern.c  extern.h  foobar-widget.c  gilded-star-dbus.h  gilded-star.c  gilded-star.h  global-keys.c  gnome-panel-properties.desktop  gnome-run.c  gnome-session-flashback.in  icon-entry-hack.h  launcher.c  launcher.h  logout.c  main.c  main.h  menu-fentry.c  menu-fentry.h  menu-properties.c  menu-util.c  (+38 more)
idl/: GNOME_Panel.idl  panel2.idl
libgnome-applet/: .cvsignore  ChangeLog  Makefile.am  applet-server-service.xml  applet-service.xml  glib-mkenums.template  gnome-applet-background-type.h  gnome-applet-config.c  gnome-applet-config.h  gnome-applet-label.c  gnome-applet-label.h  gnome-applet-layout-box.c  gnome-applet-layout-box.h  gnome-applet-lifespan.h  gnome-applet-orientation.h  gnome-applet.c  gnome-applet.h  libgnome-applet-uninstalled.pc.in  libgnome-applet.h  libgnome-applet.pc.in
libpanel-applet/: Makefile.am  panel-applet-bindings.c  panel-applet-bindings.h  panel-applet.c
po/: POTFILES.in  POTFILES.skip  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  gl.po  id.po  lt.po  lv.po  pl.po  pt_BR.po  ru.po  sr.po  sr@latin.po  zh_CN.po
(+27 files in other folders)
